parse/y.output

state 0
	$accept: .chunk $end 
	chunk1: .    (4)

	.  reduce 4 (src line 62)

	chunk  goto 1
	chunk1  goto 2

state 1
	$accept:  chunk.$end 

	$end  accept
	.  error


state 2
	chunk:  chunk1.    (1)
	chunk:  chunk1.laststmt 
	chunk:  chunk1.laststmt ';' 
	chunk1:  chunk1.stmt 
	chunk1:  chunk1.';' 

	If  shift 18
	For  shift 19
	While  shift 9
	Break  shift 6
	Return  shift 7
	Function  shift 13
	Var  shift 14
	Append  shift 16
	Ident  shift 21
	';'  shift 5
	.  reduce 1 (src line 45)

	laststmt  goto 3
	stmt  goto 4
	forNumStmt  goto 11
	ifstmt  goto 10
	forRangeStmt  goto 12
	lhslist  goto 8
	lhs  goto 17
	prefixexp  goto 20
	functioncall  goto 15

state 3
	chunk:  chunk1 laststmt.    (2)
	chunk:  chunk1 laststmt.';' 

	';'  shift 22
	.  reduce 2 (src line 50)


state 4
	chunk1:  chunk1 stmt.    (5)

	.  reduce 5 (src line 64)


state 5
	chunk1:  chunk1 ';'.    (6)

	.  reduce 6 (src line 66)


state 6
	laststmt:  Break.    (7)

	.  reduce 7 (src line 70)


state 7
	laststmt:  Return.    (8)
	laststmt:  Return.exprlist 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  reduce 8 (src line 72)

	exprlist  goto 23
	lhs  goto 38
	prefixexp  goto 30
	expr  goto 24
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 8
	stmt:  lhslist.'=' exprlist 
	lhslist:  lhslist.',' lhs 

	'='  shift 42
	','  shift 43
	.  error


state 9
	stmt:  While.expr block 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 44
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 10
	stmt:  ifstmt.    (12)

	.  reduce 12 (src line 82)


state 11
	stmt:  forNumStmt.    (13)

	.  reduce 13 (src line 84)


state 12
	stmt:  forRangeStmt.    (14)

	.  reduce 14 (src line 86)


state 13
	stmt:  Function.Ident parlist block 

	Ident  shift 45
	.  error


state 14
	stmt:  Var.namelist 
	stmt:  Var.namelist '=' exprlist 

	Ident  shift 47
	.  error

	namelist  goto 46

state 15
	stmt:  functioncall.    (18)
	prefixexp:  functioncall.    (40)

	'('  reduce 40 (src line 171)
	'.'  reduce 40 (src line 171)
	'['  reduce 40 (src line 171)
	.  reduce 18 (src line 94)


state 16
	stmt:  Append.'(' lhs ',' expr ')' 

	'('  shift 48
	.  error


state 17
	lhslist:  lhs.    (32)
	prefixexp:  lhs.    (39)

	'='  reduce 32 (src line 149)
	','  reduce 32 (src line 149)
	.  reduce 39 (src line 169)


state 18
	ifstmt:  If.expr block 
	ifstmt:  If.expr block Else block 
	ifstmt:  If.expr block Else ifstmt 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 49
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 19
	forRangeStmt:  For.Ident ',' Ident '=' Range lhs block 
	forNumStmt:  For.Ident '=' expr ',' expr block 
	forNumStmt:  For.Ident '=' expr ',' expr ',' expr block 

	Ident  shift 50
	.  error


state 20
	lhs:  prefixexp.'.' Ident 
	lhs:  prefixexp.'[' expr ']' 
	functioncall:  prefixexp.'(' ')' 
	functioncall:  prefixexp.'(' args ')' 

	'('  shift 53
	'.'  shift 51
	'['  shift 52
	.  error


state 21
	lhs:  Ident.    (36)

	.  reduce 36 (src line 161)


state 22
	chunk:  chunk1 laststmt ';'.    (3)

	.  reduce 3 (src line 55)


state 23
	laststmt:  Return exprlist.    (9)
	exprlist:  exprlist.',' expr 

	','  shift 54
	.  reduce 9 (src line 74)


state 24
	exprlist:  expr.    (34)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'|' expr 
	expr:  expr.'&' expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.Le expr 
	expr:  expr.Ge expr 
	expr:  expr.Eq2 expr 
	expr:  expr.Neq expr 
	expr:  expr.Dot2 expr 

	And  shift 62
	Or  shift 63
	Eq2  shift 68
	Neq  shift 69
	Ge  shift 67
	Le  shift 66
	Dot2  shift 70
	'>'  shift 65
	'<'  shift 64
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	'%'  shift 59
	'|'  shift 60
	'&'  shift 61
	.  reduce 34 (src line 155)


state 25
	expr:  True.    (45)

	.  reduce 45 (src line 187)


state 26
	expr:  False.    (46)

	.  reduce 46 (src line 189)


state 27
	expr:  Nil.    (47)

	.  reduce 47 (src line 191)


state 28
	expr:  Number.    (48)

	.  reduce 48 (src line 193)


state 29
	expr:  String.    (49)

	.  reduce 49 (src line 195)


state 30
	lhs:  prefixexp.'.' Ident 
	lhs:  prefixexp.'[' expr ']' 
	functioncall:  prefixexp.'(' ')' 
	functioncall:  prefixexp.'(' args ')' 
	expr:  prefixexp.    (50)

	'('  shift 53
	'.'  shift 51
	'['  shift 52
	.  reduce 50 (src line 197)


state 31
	expr:  Function.parlist block 

	'('  shift 72
	.  error

	parlist  goto 71

state 32
	expr:  '('.expr ')' 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 73
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 33
	expr:  '-'.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 74
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 34
	expr:  '!'.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 75
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 35
	expr:  dictConstructor.    (71)

	.  reduce 71 (src line 261)


state 36
	expr:  listConstructor.    (72)

	.  reduce 72 (src line 263)


state 37
	expr:  '#'.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 76
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 38
	prefixexp:  lhs.    (39)

	.  reduce 39 (src line 169)


state 39
	prefixexp:  functioncall.    (40)

	.  reduce 40 (src line 171)


state 40
	dictConstructor:  '{'.'}' 
	dictConstructor:  '{'.entries '}' 

	String  shift 80
	Ident  shift 81
	'}'  shift 77
	.  error

	entries  goto 78
	entry  goto 79

state 41
	listConstructor:  '['.']' 
	listConstructor:  '['.exprlist ']' 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	']'  shift 82
	'#'  shift 37
	.  error

	exprlist  goto 83
	lhs  goto 38
	prefixexp  goto 30
	expr  goto 24
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 42
	stmt:  lhslist '='.exprlist 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	exprlist  goto 84
	lhs  goto 38
	prefixexp  goto 30
	expr  goto 24
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 43
	lhslist:  lhslist ','.lhs 

	Ident  shift 21
	.  error

	lhs  goto 85
	prefixexp  goto 20
	functioncall  goto 39

state 44
	stmt:  While expr.block 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'|' expr 
	expr:  expr.'&' expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.Le expr 
	expr:  expr.Ge expr 
	expr:  expr.Eq2 expr 
	expr:  expr.Neq expr 
	expr:  expr.Dot2 expr 

	And  shift 62
	Or  shift 63
	Eq2  shift 68
	Neq  shift 69
	Ge  shift 67
	Le  shift 66
	Dot2  shift 70
	'{'  shift 87
	'>'  shift 65
	'<'  shift 64
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	'%'  shift 59
	'|'  shift 60
	'&'  shift 61
	.  error

	block  goto 86

state 45
	stmt:  Function Ident.parlist block 

	'('  shift 72
	.  error

	parlist  goto 88

state 46
	stmt:  Var namelist.    (16)
	stmt:  Var namelist.'=' exprlist 
	namelist:  namelist.',' Ident 

	'='  shift 89
	','  shift 90
	.  reduce 16 (src line 90)


state 47
	namelist:  Ident.    (29)

	.  reduce 29 (src line 139)


state 48
	stmt:  Append '('.lhs ',' expr ')' 

	Ident  shift 21
	.  error

	lhs  goto 91
	prefixexp  goto 20
	functioncall  goto 39

state 49
	ifstmt:  If expr.block 
	ifstmt:  If expr.block Else block 
	ifstmt:  If expr.block Else ifstmt 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'|' expr 
	expr:  expr.'&' expr 
	expr:  expr.And expr 
	expr:  expr.Or expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.Le expr 
	expr:  expr.Ge expr 
	expr:  expr.Eq2 expr 
	expr:  expr.Neq expr 
	expr:  expr.Dot2 expr 

	And  shift 62
	Or  shift 63
	Eq2  shift 68
	Neq  shift 69
	Ge  shift 67
	Le  shift 66
	Dot2  shift 70
	'{'  shift 87
	'>'  shift 65
	'<'  shift 64
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	'%'  shift 59
	'|'  shift 60
	'&'  shift 61
	.  error

	block  goto 92

state 50
	forRangeStmt:  For Ident.',' Ident '=' Range lhs block 
	forNumStmt:  For Ident.'=' expr ',' expr block 
	forNumStmt:  For Ident.'=' expr ',' expr ',' expr block 

	'='  shift 94
	','  shift 93
	.  error


state 51
	lhs:  prefixexp '.'.Ident 

	Ident  shift 95
	.  error


state 52
	lhs:  prefixexp '['.expr ']' 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 96
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 53
	functioncall:  prefixexp '('.')' 
	functioncall:  prefixexp '('.args ')' 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	')'  shift 97
	'['  shift 41
	'#'  shift 37
	.  error

	args  goto 98
	lhs  goto 38
	prefixexp  goto 30
	expr  goto 99
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 54
	exprlist:  exprlist ','.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 100
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 55
	expr:  expr '+'.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 101
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 56
	expr:  expr '-'.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 102
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 57
	expr:  expr '*'.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 103
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 58
	expr:  expr '/'.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 104
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 59
	expr:  expr '%'.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 105
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 60
	expr:  expr '|'.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 106
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 61
	expr:  expr '&'.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 107
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 62
	expr:  expr And.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 108
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 63
	expr:  expr Or.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 109
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 64
	expr:  expr '<'.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 110
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 65
	expr:  expr '>'.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 111
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 66
	expr:  expr Le.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 112
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 67
	expr:  expr Ge.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 113
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 68
	expr:  expr Eq2.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 114
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 69
	expr:  expr Neq.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 115
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 70
	expr:  expr Dot2.expr 

	Function  shift 31
	True  shift 25
	False  shift 26
	Nil  shift 27
	Number  shift 28
	String  shift 29
	Ident  shift 21
	'{'  shift 40
	'('  shift 32
	'!'  shift 34
	'-'  shift 33
	'['  shift 41
	'#'  shift 37
	.  error

	lhs  goto 38
	prefixexp  goto 30
	expr  goto 116
	functioncall  goto 39
	dictConstructor  goto 35
	listConstructor  goto 36

state 71
	expr:  Function parlist.block 

	'{'  shift 87
	.  error

	block  goto 117
